# MMPC

./: .gitignore  Cargo.toml  PROJECT_LIST.md  README.AI.md  README.md  build.sh  mov.sh  package-lock.json  package.json  tailwind.config.js  tmp-fix2.cjs  tmp-write-overview.js
.VSCodeCounter/2026-05-01_21-13-53/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.reasonix/semantic/: index.jsonl  index.meta.json
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/immutable/assets/: 0.BvDuigeJ.css
.svelte-kit/output/client/_app/immutable/chunks/: 7PdtRfbG.js  BXpIGxkD.js  D9uCMLKW.js
.svelte-kit/output/client/_app/immutable/entry/: app.CvdmAzrH.js  start.azNVOAAd.js
.svelte-kit/output/client/_app/immutable/nodes/: 3.WKWg0cDL.js
.svelte-kit/output/server/: index.js  manifest.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/chunks/: exports.js  internal.js  root.js  workspace.js
.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts
.svelte-kit/types/src/routes/java/: $types.d.ts
bmclapi/: Cargo.toml
bmclapi/src/: bmclapi.rs  lib.rs
mc_launcher_core/: Cargo.toml
mc_launcher_core/src/: lib.rs
mc_launcher_core/src/auth/: mod.rs  offline.rs
mc_launcher_core/src/launch/: mod.rs  offline.rs  version.rs
mc_launcher_core/src/runtime/: mod.rs  prepare.rs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: download.rs  export.rs  java.rs  launch.rs  mod.rs  mods.rs  settings.rs  workspace.rs
src/lib/components/: ConfigTab.svelte  ExportModal.svelte  ModsTab.svelte  OverviewTab.svelte
src/lib/mock/: data.ts
src/lib/stores/: workspace.ts
src/lib/types/: index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/export/: +page.svelte
src/routes/java/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/workspace/[id]/: +page.svelte
(+3 files in other folders)
