[package]
name = "mc_launcher_core"
version = "0.1.0"
description = "Minecraft launcher SDK — offline auth & launch, extensible for online auth"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v3", "v4", "serde"] }
md-5 = "0.10"
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
sha1 = "0.10.6"
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
trie-rs = "0.4.2"
bmclapi = { path = "../bmclapi" }